--- a/trunk/gwt2go/src/com/gwt2go/dev/client/ui/view/CellTreeExpl1ViewImpl.ui.xml
+++ b/trunk/gwt2go/src/com/gwt2go/dev/client/ui/view/CellTreeExpl1ViewImpl.ui.xml
@@ -1,13 +1,44 @@
+<!--                                                                        -->
+<!-- Copyright 2012 L.Pelov		                                            -->
+<!-- Licensed under the Apache License, Version 2.0 (the "License"); you    -->
+<!-- may not use this file except in compliance with the License. You may   -->
+<!-- may obtain a copy of the License at                                    -->
+<!--                                                                        -->
+<!-- http://www.apache.org/licenses/LICENSE-2.0                             -->
+<!--                                                                        -->
+<!-- Unless required by applicable law or agreed to in writing, software    -->
+<!-- distributed under the License is distributed on an "AS IS" BASIS,      -->
+<!-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or        -->
+<!-- implied. License for the specific language governing permissions and   -->
+<!-- limitations under the License.                                         -->
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
-	xmlns:g="urn:import:com.google.gwt.user.client.ui">
+	xmlns:g="urn:import:com.google.gwt.user.client.ui"
+	xmlns:c="urn:import:com.google.gwt.user.cellview.client">
 	<ui:style>
 		.important {
 			font-weight: bold;
 		}
 	</ui:style>
-	<g:HTMLPanel>
-		Hello,
-		<g:Button styleName="{style.important}" ui:field="button" />
+	<g:HTMLPanel ui:field="htmlPanel">
+		<table width="100%">
+			<tr>
+				<td valign='top'>
+					This is template for cell tree view
+				</td>
+			</tr>
+			<tr>
+				<td align='center'>
+					<g:HorizontalPanel>
+						<g:VerticalPanel>
+							<c:CellTree ui:field="cellTree1"/>
+						</g:VerticalPanel>
+						<g:VerticalPanel>
+							<c:CellTree ui:field="cellTree2"/>
+						</g:VerticalPanel>						
+					</g:HorizontalPanel>
+				</td>
+			</tr>
+		</table>
 	</g:HTMLPanel>
 </ui:UiBinder> 
