--- a/gwt2go/war/Gwt2go.css
+++ b/gwt2go/war/Gwt2go.css
@@ -32,3 +32,12 @@ h1 {
 #closeButton {
   margin: 15px 6px 6px;
 }
+
+.headcol{
+	position:absolute; 
+	width:5em; 
+	left:0; top:auto;
+	border-right: 0px none black; 
+	border-top: 3px solid grey; 
+	margin-top:-3px; padding-right:4px;
+}
